# agentic-ai-governance-toolkit

./: .gitignore  AGENTS.md  BIBLE.md  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  main.tsx  vite-env.d.ts
app/src/lib/: rubric.ts  (+3 more)
docs/01-agent-lifecycle/: lifecycle-overview.md
docs/02-risk-assessment/: agent-risk-model.md  scoring-rubric.md
docs/03-checklists/: dora-ict-risk-checklist.de.md  dora-ict-risk-checklist.en.md  eu-ai-act-agent-checklist.de.md  eu-ai-act-agent-checklist.en.md  go-live-readiness.md
docs/04-operating-model/: committee-templates.md  decision-rights.md  roles-and-raci.md
evaluator/: README.md  pyproject.toml
evaluator/examples/: .gitkeep  agent-for-policy-check.yaml  logs-sample.jsonl  usecase-01-internal-knowledge-assistant.yaml  usecase-02-customer-servicing-agent.yaml  usecase-03-payments-operations-agent.yaml
evaluator/policies/: example-policy.yaml
evaluator/src/agent_evaluator/: __init__.py  cli.py  llm_judge.py  log_analyzer.py  policy_check.py  risk_score.py  rubric.py  rubric.yaml
evaluator/tests/: conftest.py  test_cli.py  test_examples.py  test_llm_judge.py  test_log_analyzer.py  test_policy_check.py  test_risk_score.py  test_rubric_consistency.py
scripts/: gate.sh  render-diagrams.sh
templates/: agent-registry-entry.md  decommissioning-protocol.md  use-case-intake.md
(+18 files in other folders)
